# immunotype

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  app.py  cli.py  constants.py  environment.yml  immunotype.py  probabilities.csv  pyproject.toml  requirements.txt  testing.py  typing.csv  utils.py  web.py
.github/workflows/: check_filesize_hf.yml  ci.yml  release.yml  sync_hf.yml
src/immunotype/: __init__.py  app.py  cli.py  constants.py  immunotype.py  model.py  server.py  utils.py  web.py
src/immunotype/data/: selected_alleles.csv
src/immunotype/examples/: multi_sample_input.tsv  multi_sample_prob_output.tsv  multi_sample_typing_ngs.tsv  multi_sample_typing_output.tsv  single_sample_input.tsv  single_sample_prob_output.tsv  single_sample_true_typing.tsv  single_sample_typing_ngs.tsv
src/immunotype/weights/: gnn_model_weights.pth
test/example_input/: dataset_typing.tsv  peptide_list_typing.tsv
tests/: conftest.py  test_app.py  test_cli.py  test_immunotype.py  test_web.py
tests/examples/: multi_sample_input.tsv  multi_sample_output.tsv  multi_sample_output_probs.tsv  multi_sample_true_typing.tsv  single_input.tsv  single_sample_input.tsv
