[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immunotype"
version = "0.0.1"
description = "Peptide-based HLA typing from immunopeptidomics data"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Matteo Pilz"},
    {name = "Jonas Scheid"}
]
keywords = ["immunopeptidomics", "HLA", "typing", "peptides", "machine learning", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "tqdm>=4.64.0",
    "rich-click>=1.6.0"
]

[project.optional-dependencies]
app = [
    "gradio>=4.0.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pre-commit>=3.0.0"
]
all = [
    "immunotype[dev,app]"
]

[project.urls]
Homepage = "https://github.com/immunotype/immunotype"
Repository = "https://github.com/immunotype/immunotype.git"
Issues = "https://github.com/immunotype/immunotype/issues"

[project.scripts]
immunotype = "immunotype.cli:main"
immunotype-app = "immunotype.app:main"

# Tool configurations
[tool.hatch.build.targets.wheel]
packages = ["src/immunotype"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=immunotype",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
